IMAGE CROPPING FIXED! Image now correctly displays area selected via the crop on the KMS. Added Keyframe for animating the zoom controls in; may not keep this.

--- a/src/styles/components/ZoomControls.scss
+++ b/src/styles/components/ZoomControls.scss
@@ -1,3 +1,8 @@
+@keyframes enterFromBottom {
+    from { bottom: -100%; opacity: 0; }
+    to { bottom: 0; opacity: 1; }
+}
+
 .ZoomControls {
     position: absolute;
     left: 0;
@@ -14,6 +19,9 @@
     flex-direction: row;
 
     background-color: rgba(0,0,0,0.8);
+    opacity: 1;
+
+    animation: enterFromBottom .6s;
 
     .Button {
 
